openmediavault (0.3.0.19) stable; urgency=low

  * Do not display shared folder ACL dialog if the filesystem containing the
    shared folder does not support POSIX ACLs.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 Jul 2012 19:56:55 +0200

openmediavault (0.3.0.18) stable; urgency=low

  * Update locales.
  * Display error image if requested RRD graph image is not available.
  * Fix issues with wlan interfaces.
  * Fix bug in directory chooser dialog.
  * Fix bug in Windows IE10.
  * Mantis 0000542: Fix bug in avahi-daemon config script.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 12 Jul 2012 20:13:33 +0200

openmediavault (0.3.0.17) stable; urgency=low

  * Update locales.
  * Mantis 0000532: PHP Warning after exchange from php5-auth-pam to php5-pam.
  * Mantis 0000534: Scan for new disks doesn't update web inteface immediatly
    after scan.

 -- Volker <volker.theile@openmediavault.org>  Tue, 03 Jul 2012 23:21:22 +0200

openmediavault (0.3.0.16) stable; urgency=low

  * Update locales.
  * Sort directory list in shared folder ACL and directoty chooser dialog.
  * Mantis 0000528: Add missing DNS-SD implementation to the SSH service RPC.

 -- Volker <volker.theile@openmediavault.org>  Fri, 29 Jun 2012 23:34:34 +0200

openmediavault (0.3.0.15) stable; urgency=low

  * Update locales.
  * Add feature to rescan SCSI bus via WebGUI.
  * Mantis 0000507: Allow setting multiple secondary DNS servers. The input
    field in the WebGUI accept a list of comma-seperated IP addresses.
  * Mantis 0000510: Timestamps on system logs are displayed incorrectly on
    web interface for non-DST time zones.
  * Mantis 0000521: Replace php5-auth-pam with php5-pam package because it
    has been dropped in Debian Wheezy.
  * Mantis 0000522: Improve DNS Service Discovery management.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 15 Jun 2012 22:26:24 +0200

openmediavault (0.3.0.14) stable; urgency=low

  * Update locales.